Bugfix: dataset split. Adding CNN. Adding large wav2vec.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ __pycache__/
 .idea/
 
 datasets/RAVDESS/raw_data
-datasets/RAVDESS/wav2vec_data
+datasets/RAVDESS/wav2vec_*
 
-baselines/wav2vec_neural/wav2vec_clf_ravdess/*
+baselines/wav2vec_neural/wav2vec_clf_*/*
