--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 __pycache__/
 .idea/
+venv/
 
 datasets/RAVDESS/raw_data
 datasets/RAVDESS/wav2vec_*
+datasets/RAVDESS/mfcc
+datasets/RAVDESS/*gemaps*
 
 baselines/wav2vec_neural/wav2vec_clf_*/*
