--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 librosa==0.8.1
 llvmlite==0.37.0
+matplotlib==3.4.3
 Markdown==3.3.4
 numba==0.54.1
 numpy==1.19.5
