--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,8 @@ tensorflow-hub==0.12.0
 termcolor==1.1.0
 threadpoolctl==3.0.0
 tokenizers==0.10.3
+torch==1.10.0
+torchaudio==0.10.0
 tqdm==4.62.3
 transformers==4.12.3
 typing-extensions==3.7.4.3
