--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ __pycache__/
 .idea/
 venv/
 
-datasets/datasets_files/RAVDESS/*
+src/datasets/datasets_files/RAVDESS/*
 
-baselines/wav2vec_neural/wav2vec_clf_*/*
+results/saved_models/*
