New dataset - MELD.

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ __pycache__/
 venv/
 
 src/datasets/datasets_files/RAVDESS/*
+src/datasets/datasets_files/MELD/*
+!src/datasets/datasets_files/MELD/meld_metadata.yml
 
 results/saved_models/*
