--- a/config.yml
+++ b/config.yml
@@ -1,18 +1,24 @@
 data:
-  source-name: wav2vec_mean  # if you process data with a preprocessor, this name will be taken as the data output directory.
+  source-name: 960wav2vec_mean_normalized  # if you process data with a preprocessor, this name will be taken as the data output directory.
   path-extension: wav
   dataset:
-    name: MELD
+    name: RAVDESS
     batch-size: 32
-    train-size: 1.0
-    test-size: 1.0
-    val-size: 1.0
+    train-size: 0.7
+    test-size: 0.2
+    val-size: 0.1
     desired-sampling-rate: 16000
     prefetch: 2
     desired-length: null
     padding-value: 0.0
     shuffle-seed: null
     resample-training-set: False
+ravdess:
+  split-by-actor: true
+  actors:
+    train: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+    val: [20]
+    test: [21, 22, 23, 24]
 model:
   wav2vec2:
     name: Wav2vecClassifier
@@ -20,7 +26,7 @@ model:
     save-dir: ../../results/saved_models/meld/meld_mlp_clf
     aggregation: mean
     mode: training # {training, testing}
-    train-epochs: 6
+    train-epochs: 35
   gemaps-mfcc:
     classic:
       plot-dir: ../../results/plots
