--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ matplotlib==3.4.3
 mkl-fft==1.3.1
 mkl-random==1.2.2
 mkl-service==2.4.0
+nlpaug==1.1.9
 munkres==1.1.4
 numba==0.54.1
 numpy==1.19.5
